<?xml version="1.0" encoding="utf-8" ?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">JustJava</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order"> Order </string>
    <string name="order_summary_email_subject">Just java order for </string>
    <string name="thank_you">Thank you!</string>
    <string name="total">Total: </string>
    <string name="add_whipped_cream">Add whipped cream? </string>
    <string name="add_chocolate">Add chocolate?</string>
    <string name="not_more_than_100">You cannot have more than 100 coffee! </string>
    <string name="not_less_than_1">You cannot have less than 1 coffee! </string>
    <string name="name_1">Name: </string>

</resources>
